envoy.yaml
# admin:
#   access_log_path: /tmp/admin_access.log
#   address:
#     socket_address: { address: 0.0.0.0, port_value: 9901 }

# static_resources:
#   listeners:
#     - name: listener_0
#       address:
#         socket_address: { address: 0.0.0.0, port_value: 8080 }
#       filter_chains:
#         - filters:
#             - name: envoy.http_connection_manager
#               config:
#                 codec_type: auto
#                 stat_prefix: ingress_http
#                 route_config:
#                   name: local_route
#                   virtual_hosts:
#                     - name: local_service
#                       domains: ["*"]
#                       routes:
#                         - match: { prefix: "/" }
#                           route:
#                             cluster: greeter_service
#                             max_grpc_timeout: 0s
#                       cors:
#                         allow_origin:
#                           - "*"
#                         allow_methods: GET, PUT, DELETE, POST, OPTIONS
#                         allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
#                         max_age: "1728000"
#                         expose_headers: custom-header-1,grpc-status,grpc-message
#                 http_filters:
#                   - name: envoy.grpc_web
#                   - name: envoy.cors
#                   - name: envoy.router
#   clusters:
#     - name: greeter_service
#       connect_timeout: 0.25s
#       type: logical_dns
#       http2_protocol_options: {}
#       lb_policy: round_robin
#       hosts: [{ socket_address: { address: localhost, port_value: 50551 } }]

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: echo_service
                            timeout: 0s
                            max_stream_duration:
                              grpc_timeout_header_max: 0s
                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        # allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: echo_service
      connect_timeout: 0.25s
      type: logical_dns
      # HTTP/2 support
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: cluster_0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.0.179
                      port_value: 50051
